--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,8 @@ access.log
 favicon.ico
 *.txt
 simple.html.orig
+simple_BACKUP_44121.html
+simple_BASE_44121.html
+simple_LOCAL_44121.html
+simple_REMOTE_44121.html
 
